[project]
name = "query-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hutch-bunny",
    "jupyter>=1.1.1",
    "marimo>=0.11.14",
    "streamlit>=1.43.0",
]

[tool.uv.sources]
hutch-bunny = { git = "https://github.com/Health-Informatics-UoN/hutch-bunny", rev = "feat/build-pip" }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.9.9",
]
